handled the navbar UI shifting issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,6 +64,7 @@ border-radius: 4px; */
 
   .DocSearch-Button {
     margin: 0;
+    width: 39px;
   }
 
   .DocSearch-Button-Placeholder {
@@ -71,15 +72,15 @@ border-radius: 4px; */
   }
 
   .DocSearch-Search-Icon {
-    width: 23px;
-    height: 23px;
+    width: 20px;
+    height: 20px;
   }
   
 
-  .herobtn .DocSearch-Button-Container {
+  /* .herobtn .DocSearch-Button-Container {
     margin-right: 4px;
     margin-left: 4px;
-  }
+  } */
 /* } */
 
 @media (max-width: 450px) {
